--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -110,6 +110,10 @@ body {
     color: #ffffff;
 }
 
+.text-shadow   {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.26));
+}
+
 /* content */
 
 #content {
@@ -130,12 +134,20 @@ body {
 /* carousel-item */
 
 .carousel-item {
-    min-height: 600px;
-    height: 600px;
+    height: 40%;
 }
 
 
 /* Image bloc */
+
+.img-choice {
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    width: 25rem;
+    height: 35rem;
+    background-position: center;
+}
 
 #img-console {
     background: url("../images/console.jpg");
@@ -159,6 +171,15 @@ body {
 
 }
 
+/* choice-bloc */
+
+#choice {
+    margin-top: 3vw;
+}
+
+
+/* card */
+
 .card-group {
     display: flex;
 }
@@ -180,12 +201,29 @@ body {
     border: 11px solid #00BFB2;
 }
 
+.card-link {
+    width: 35rem;
+}
+
 .card-font {
     font-family: 'Playfair Display';
     font-style: normal;
     font-weight: 600;
     font-size: 48px;
     line-height: 27px;
+    color: #FFFFFF;
+}
+
+.card-title {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+    /* identical to box height */
+    
+    text-align: center;
+    letter-spacing: 0.1em;
+    
     color: #FFFFFF;
 }
 
@@ -210,3 +248,16 @@ body {
     height: 30px;
     width: 30px;
 }
+
+
+/* Media query */
+
+@media (max-width: 575.98px) { 
+
+    .card-group {
+        display:block;
+    }
+
+ }
+
+
