--- a/asset/css/phone.css
+++ b/asset/css/phone.css
@@ -8,7 +8,7 @@
 /* reglage background */
 
 #content {
-    padding: 5vw;
+    padding-bottom: 5vw;
 }
 
 
@@ -19,7 +19,7 @@ background: #F5F5F5;
 border: 1px solid #000000;
 box-sizing: border-box;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-margin: 5vw 9vw 0vw 5vw;
+margin: 5vw 5vw 0vw 5vw;
 padding: 5vw 0 5vw 0;
 }
 
@@ -27,27 +27,63 @@ padding: 5vw 0 5vw 0;
 
 .figure {
     border: 0.2vw solid black;
-    justify-content: center;
     padding: 2vw;
     margin-right: 1vw;
     margin-left: 1vw;
-    min-width: 18vw;
-    width: 18vw;
+    min-width: 16rem;
+    width: 16vw;
 }
 
 /* taille image */
 
 .img {
     width: 100%;
-    max-width: 14vw;
-    height: 14vw;
+    max-width: 12rem;
+    height: 12rem;
 }
 
 /* style caption */
 
 .caption-style {
-    font-size: 2vw;
+    font-size: 1rem;
     text-align: center;
     color: #000000;
     position: relative;
 }
+
+
+/* Media query */
+
+
+@media (max-width: 767.98px) { 
+
+    .figure {
+        min-width: 12rem;
+    }
+
+    .img {
+        width: 100%;
+        max-width: 10rem;
+        height: 10rem;
+    }
+
+}
+
+@media (max-width: 575.98px) { 
+
+    .figure {
+        min-width: 35vw;
+    }
+
+    .img {
+        width: 100%;
+        max-width: 30vw;
+        height: 30vw;
+    }
+
+}
+
+
+
+
+
