--- a/asset/css/phone.css
+++ b/asset/css/phone.css
@@ -12,6 +12,14 @@
 }
 
 
+/* form-search-page */ 
+
+.form-search-page {
+    margin: 2vw 5vw 2vw 5vw;
+
+}
+
+
 /* bloc phone */
 
 #phone-block {
@@ -51,6 +59,8 @@ padding: 5vw 0 5vw 0;
 }
 
 
+
+
 /* Media query */
 
 @media (max-width: 1200px   ) { 
@@ -62,7 +72,7 @@ padding: 5vw 0 5vw 0;
     .img {
         width: 100%;
         max-width: 11rem;
-        height: 11rem;
+        height: 9rem;
     }
 
 }
@@ -77,7 +87,7 @@ padding: 5vw 0 5vw 0;
     .img {
         width: 100%;
         max-width: 8rem;
-        height: 8rem;
+        height: 6rem;
     }
 
 }
