--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -29,6 +29,14 @@ body {
 
 /* text-property */
 
+.title-page {
+    color: #00BFB2;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 3rem;
+    line-height: 4rem;
+}
+
 /* font-size */
 
 .text-48 {
@@ -45,13 +53,12 @@ body {
     font-family: 'Playfair Display', serif;
 }
 
-
 /* slider */
 
 
 #slider {
     background: #00BFB2;
-    position: fixed;
+    position: sticky;
     width: 100%;
     z-index: 999;
     top: 0;
@@ -73,7 +80,7 @@ body {
 /* recherche-bar */
 
 .search-bar {
-    border: solid 5px rgba(149, 191, 178, 76.8);
+    border: solid 2px rgba(149, 191, 178, 76.8);
     box-shadow: inset 1px 4px 4px rgb(0 0 0 / 25%);
     padding-left: 1.8rem;
 
@@ -87,8 +94,7 @@ body {
     background-image: url('../images/icon/_Magnifyingglass.png');
     background-size: auto;
     background-repeat: no-repeat;
-    background-position: 0.1vw;
-
+    background-position: 0.5vw;
 
 }
 
@@ -181,9 +187,6 @@ body {
     background: #00BFB2;
     color: #ffffff;
 }
-
-
-
 
 /* carousel-item */
 
@@ -287,11 +290,11 @@ body {
 
 #footer {
     background: #00BFB2;
-    position: absolute;
+    position: static;
     width: 100%;
     height: 187px;
-    left: 0px;
-    bottom:auto;
+    left: 0;
+    bottom:0;
     color: #ffffff;
 }
 
@@ -312,6 +315,8 @@ body {
 
     .card-group {
         display:block;
+        margin-left: 22px;
+
     }
 
 }
