Amélioration responsive-text
Ajustement des tailles de textes en fonction de la résolution
écran

--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -1,6 +1,6 @@
 /* background-formulaire */
 
-#formulaire {
+#block-formulaire {
     background: no-repeat content-box #FFFFFF;
     border: 1px solid black;
     margin: auto;
