--- a/asset/css/phone.css
+++ b/asset/css/phone.css
@@ -63,7 +63,7 @@ padding: 5vw 0 5vw 0;
 
 /* Media query */
 
-@media (max-width: 1200px   ) { 
+@media (max-width: 1200px) { 
 
     .figure {
         width: 11rem;
@@ -74,7 +74,6 @@ padding: 5vw 0 5vw 0;
         max-width: 11rem;
         height: 9rem;
     }
-
 }
 
 
@@ -90,12 +89,26 @@ padding: 5vw 0 5vw 0;
         height: 6rem;
     }
 
+    .caption-style {
+        font-size: 0.9rem;
+        text-align: center;
+        color: #000000;
+        position: relative;
+    }
+
 }
 
 @media (max-width: 575.98px) { 
 
     .figure {
         font-size: 0.8rem;
+    }
+
+    .caption-style {
+        font-size: 0.8rem;
+        text-align: center;
+        color: #000000;
+        position: relative;
     }
 
 }
