--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -26,6 +26,8 @@ body {
     height: 100%;
 }
 
+.test {}
+
 
 /* text-property */
 
@@ -207,7 +209,20 @@ body {
 }
 
 #img-console {
-    background: url("../images/console.jpg");
+
+    background: linear-gradient(0deg, rgba(60, 60, 60, 0.8), rgba(60, 60, 60, 0.8)), url('../images/console.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    width: 25rem;
+    height: 35rem;
+    background-position: center;
+
+}
+
+#img-console:hover {
+
+    background: linear-gradient(0deg, rgba(60, 60, 60, 0), rgba(60, 60, 60, 0)), url('../images/console.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -218,7 +233,18 @@ body {
 }
 
 #img-telephone {
-    background: url("../images/telephone.jpg");
+    background: linear-gradient(0deg, rgba(60, 60, 60, 0.8), rgba(60, 60, 60, 0.8)), url('../images/telephone.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    width: 25rem;
+    height: 35rem;
+    background-position: center;
+
+}
+
+#img-telephone:hover {
+    background: linear-gradient(0deg, rgba(60, 60, 60, 0), rgba(60, 60, 60, 0)), url('../images/telephone.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -262,6 +288,11 @@ body {
     width: 33rem;
     margin-left: 0;
     justify-content: space-around;
+    text-decoration: none;
+}
+
+.card-link:hover{
+    text-decoration: underline white;
 }
 
 .choice-card .card-font {
@@ -311,6 +342,31 @@ body {
 
 /* Media query */
 
+@media (max-width: 767.98px) { 
+
+    .card-group {
+        display:block;
+    }
+
+    .title-page {
+        color: #00BFB2;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 2rem;
+        line-height: 3rem;
+    }
+
+    .search-bar {
+        font-size: 2rem;
+        font-size: 0.9rem;
+    }
+
+    .btn-search {
+        font-size: 14px;
+    }
+
+ }
+
 @media (max-width: 575.98px) { 
 
     .card-group {
@@ -318,16 +374,26 @@ body {
         margin-left: 22px;
 
     }
+    .title-page {
+        color: #00BFB2;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 1.6rem;
+        line-height: 2rem;
+    }
+
+    .search-bar {
+        font-size: 2rem;
+        font-size: 0.7rem;
+    }
+
+    .btn-search {
+        font-size: 12px;
+    }
 
 }
 
-@media (max-width: 767.98px) { 
 
-    .card-group {
-        display:block;
-    }
-
- }
 
 
 
