--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -6,6 +6,8 @@
     margin: auto;
     height: auto;
     width: 60vw;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 
