--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -182,6 +182,23 @@ body {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.26));
 }
 
+
+/* file d'ariane */ 
+
+.circle-empty {
+    background: rgba(0, 191, 178, 0.33);
+    width: 13vw;
+    height: 13vw;
+    border-radius: 50%;
+}
+
+.trait-empty {
+    border: 2px solid rgba(0, 191, 178, 0.33);
+    height: 0;
+    width: 14vw;
+}
+
+
 /* Footer */
 
 #footer {
@@ -213,7 +230,7 @@ body {
         color: #00BFB2;
         font-style: normal;
         font-weight: 600;
-        font-size: 2rem;
+        font-size: 1.8rem;
         line-height: 3rem;
     }
 
@@ -234,7 +251,7 @@ body {
         color: #00BFB2;
         font-style: normal;
         font-weight: 600;
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         line-height: 2rem;
     }
 
