--- a/asset/css/devis.css
+++ b/asset/css/devis.css
@@ -14,15 +14,28 @@
     padding: 0.8vw;
 }
 
-#devis {
+
+
+#devis-header {
     min-height: 300px;
+    background: #CDCDCD;
+    box-shadow: 1px 1px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-/* background-devis */
+/* background-tableau-background */
 
 .background-devis {
     background: #00BFB2;
     box-shadow: 1px 1px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* tableau */
+
+.table {
+    --bs-table-striped-color: #ffffff !important;
+    --bs-table-active-color: #ffffff !important;
+    --bs-table-hover-color: #ffffff !important;
+    color: #ffffff !important;
 }
 
 /* trait */
@@ -52,3 +65,16 @@
 #total {
     padding-right: 15vw;
 }
+
+/* btn-devis */
+
+.btn-devis {
+    background: rgba(255, 255, 255, 0.8);
+    border: 2px solid rgba(149, 191, 178, 76.8);
+    box-sizing: border-box;
+    border-radius: 6px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    padding: 4px 16px;
+    width: 100%;
+}
+
