--- a/asset/css/piece.css
+++ b/asset/css/piece.css
@@ -1,3 +1,12 @@
+#phone-block {
+    background: #F5F5F5;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin: 5vw 5vw 0vw 5vw;
+    padding: 5vw 0 5vw 0;
+    }
+
 /* checkbox */
 
 .form-check {
