--- a/asset/css/piece.css
+++ b/asset/css/piece.css
@@ -24,17 +24,20 @@
 }
 
 #arrow {
-    position: absolute;
+    display: none;
+}
+
+.arrow1 {
+    display: block;
+    position: relative;
     left: 12.54%;
     right: 34.48%;
     top: 27.68%;
     bottom: 70.86%;
-
-    border: 6px solid #32699F;
     box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transform: rotate(24.66deg);
 }
+
 
 @media (max-width: 767.98px) { 
 
