--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,15 +1,15 @@
 @font-face {
     font-family: "Playfair Display";
-    src: url("./asset/font/playfair_display/static/PlayfairDisplay-Regular.ttf") format("tff");
-    src: url('/asset/font/playfair_display/static/PlayfairDisplay-Black.ttf') format("tff");
-    src: url('/asset/font/playfair_display/PlayfairDisplay-Italic-VariableFont_wght.ttf') format("tff");
-    src: url('/asset/font/playfair_display/static/PlayfairDisplay-Bold.ttf') format("tff");
-    src: url('/asset/font/playfair_display/static/PlayfairDisplay-ExtraBold.ttf') format("tff");
-    src: url('/asset/font/playfair_display/static/PlayfairDisplay-ExtraBoldItalic.ttf') format("tff");
-    src: url('/asset/font/playfair_display/static/PlayfairDisplay-Medium.ttf') format("tff");
-    src: url('/asset/font/playfair_display/static/PlayfairDisplay-SemiBold.ttf') format("tff");
-    src: url('/asset/font/playfair_display/static/PlayfairDisplay-BoldItalic.ttf') format("tff");
-    src: url('/asset/font/playfair_display/static/PlayfairDisplay-Italic.ttf') format("tff");   
+    src: url("../font/playfair_display/static/PlayfairDisplay-Regular.ttf") format("tff");
+    src: url('../font/playfair_display/static/PlayfairDisplay-Black.ttf') format("tff");
+    src: url('../font/playfair_display/PlayfairDisplay-Italic-VariableFont_wght.ttf') format("tff");
+    src: url('../font/playfair_display/static/PlayfairDisplay-Bold.ttf') format("tff");
+    src: url('../font/playfair_display/static/PlayfairDisplay-ExtraBold.ttf') format("tff");
+    src: url('../font/playfair_display/static/PlayfairDisplay-ExtraBoldItalic.ttf') format("tff");
+    src: url('../font/playfair_display/static/PlayfairDisplay-Medium.ttf') format("tff");
+    src: url('../font/playfair_display/static/PlayfairDisplay-SemiBold.ttf') format("tff");
+    src: url('../font/playfair_display/static/PlayfairDisplay-BoldItalic.ttf') format("tff");
+    src: url('../font/playfair_display/static/PlayfairDisplay-Italic.ttf') format("tff");   
 }
 
 @font-face {
@@ -51,10 +51,7 @@ body {
 
 .title-page {
     color: #00BFB2;
-    font-style: normal;
     font-weight: 700;
-    font-size: 3rem;
-    line-height: 4rem;
 }
 
 .color-green {
@@ -303,14 +300,6 @@ body {
 
 @media (max-width: 767.98px) { 
 
-    .title-page {
-        color: #00BFB2;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 1.8rem;
-        line-height: 3rem;
-    }
-
     .search-bar {
         font-size: 2rem;
         font-size: 0.9rem;
@@ -323,14 +312,6 @@ body {
 }
 
 @media (max-width: 575.98px) { 
-
-    .title-page {
-        color: #00BFB2;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 1.4rem;
-        line-height: 2rem;
-    }
 
     .search-bar {
         font-size: 2rem;
