--- a/asset/css/accueil.css
+++ b/asset/css/accueil.css
@@ -24,31 +24,32 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    width: 25rem;
-    height: 35rem;
+    width: 35vw;
+    height: 50vw;
     background-position: center;
 }
 
 #img-console {
 
-    background: linear-gradient(0deg, rgba(60, 60, 60, 0.8), rgba(60, 60, 60, 0.8)), url('../images/console.jpg');
+    background: linear-gradient(0deg, rgba(60, 60, 60, 0.8), rgba(60, 60, 60, 0.8));
+    /*url('../images/console.jpg');*/
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    width: 25rem;
-    height: 35rem;
+    width: 35vw;
+    height: 50vw;
     background-position: center;
 
 }
 
 #img-console:hover {
 
-    background: linear-gradient(0deg, rgba(60, 60, 60, 0), rgba(60, 60, 60, 0)), url('../images/console.jpg');
+    background: linear-gradient(0deg, rgba(60, 60, 60, 0), rgba(60, 60, 60, 0)), url('../images/telephone.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    width: 25rem;
-    height: 35rem;
+    width: 35vw;
+    height: 50vw;
     background-position: center;
 
 }
@@ -99,7 +100,7 @@
 }
 
 .choice-card .card-link {
-    width: 35rem;
+    width: 35vw;
     margin-left: 0;
     justify-content: space-evenly;
     text-decoration: none;
@@ -146,8 +147,25 @@
 @media (max-width: 767.98px) { 
 
     .card-group {
-        display:block;
+        flex-direction: column;
+
     }
+
+    .choice-card .card-link {
+        width: 25rem;
+        height: 25rem;
+        justify-content: center !important;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    
+#img-console {
+
+    width: 25rem;
+    height: 25rem;
+
+}
 
  }
 
