--- a/asset/css/accueil.css
+++ b/asset/css/accueil.css
@@ -29,7 +29,7 @@
     background-position: center;
 }
 
-#img-console {
+.img-console {
 
     background: linear-gradient(0deg, rgba(60, 60, 60, 0.8), rgba(60, 60, 60, 0.8));
     /*url('../images/console.jpg');*/
@@ -42,9 +42,9 @@
 
 }
 
-#img-console:hover {
+.img-console:hover {
 
-    background: linear-gradient(0deg, rgba(60, 60, 60, 0), rgba(60, 60, 60, 0)), url('../images/telephone.jpg');
+    background: linear-gradient(0deg, rgba(60, 60, 60, 0), rgba(60, 60, 60, 0)), url('../images/console.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -55,7 +55,7 @@
 }
 
 #img-telephone {
-    background: linear-gradient(0deg, rgba(60, 60, 60, 0.8), rgba(60, 60, 60, 0.8)), url('../images/telephone.jpg');
+    background: linear-gradient(0deg, rgba(60, 60, 60, 0.8), rgba(60, 60, 60, 0.8));
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -66,7 +66,7 @@
 }
 
 #img-telephone:hover {
-    background: linear-gradient(0deg, rgba(60, 60, 60, 0), rgba(60, 60, 60, 0)), url('../images/telephone.jpg');
+    background: linear-gradient(0deg, rgba(60, 60, 60, 0), rgba(60, 60, 60, 0));
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -160,7 +160,7 @@
     }
 
     
-#img-console {
+.img-console {
 
     width: 25rem;
     height: 25rem;
