--- a/asset/css/accueil.css
+++ b/asset/css/accueil.css
@@ -133,6 +133,20 @@
     color: #FFFFFF;
 }
 
+/* btn */
+
+.btn-no-style, button, input[type="submit"], input[type="reset"] {
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+
+
 /* Media query */
 
 @media (max-width: 991.98px) { 
