--- a/asset/css/phone.css
+++ b/asset/css/phone.css
@@ -1,7 +1,7 @@
 /* telephone-background entente */
 
 #background-phone-1 {
-    background: url('../asset/images/telephone.jpg');
+    background: url('../../images/telephone.jpg');
     height: auto;
 }
 
