--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -118,7 +118,7 @@ body {
 .loupe {
 /* _Magnifyingglass */
 
-    background-image: url('../images/icon/_Magnifyingglass.png');
+    background-image: url('../../images/icon/_Magnifyingglass.png');
     background-size: auto;
     background-repeat: no-repeat;
     background-position: 0.5vw;
@@ -204,7 +204,7 @@ body {
     /* Image d'entete */
 
     #background-entete {
-        background: url(../images/IMG_20220425_162304.jpg);
+        background: url(../../images/IMG_20220425_162304.jpg);
     
         /* Set a specific height */
         min-height: 40vw;
@@ -260,7 +260,7 @@ body {
 
 .circle-in-validate {
     background: rgba(0, 191, 178, 1);
-    background-image: url('../images/icon/validate_icon.png');
+    background-image: url('../../images/icon/validate_icon.png');
     background-position: center;
     background-size: calc(1rem + 4vw);
     background-repeat: no-repeat;
