--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -10,6 +10,7 @@
     src: url('../font/playfair_display/static/PlayfairDisplay-SemiBold.ttf') format("tff");
     src: url('../font/playfair_display/static/PlayfairDisplay-BoldItalic.ttf') format("tff");
     src: url('../font/playfair_display/static/PlayfairDisplay-Italic.ttf') format("tff");   
+    src: url('../font/playfair_display/static/PlayfairDisplay-VariableFont_wght.ttf') format("tff");   
 }
 
 @font-face {
@@ -35,17 +36,25 @@
     padding: 0;
 }
 
-/* body */
+/* background-color body content */
 
 body {
     background: #CDCDCD;
-    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
 }
 
+#content {
+    background-color: #ffffff;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100%;
+    padding: 0 ;
+}
 
 /* text-property */
 
@@ -66,19 +75,10 @@ body {
     color:#003369
 }
 
-/* font-size */
-
-.text-2 {
-    font-size: 2rem;
+.color-white{
+    color: #ffffff;
 }
 
-.text-1 {
-    font-size: 1rem;
-}
-
-.text-0 {
-    font-size: 0.5rem;
-}
 
 /* font */
 
@@ -91,45 +91,17 @@ body {
 }
 
 
-/* slider */
+/* Nav-bar slider */
 
 
 #slider {
     background: #00BFB2;
-    width: 100%;
 }
 
 /* Burger-menu */
 
 .navbar-toggler:focus {
     background-color: white;
-
-}
-
-/* form-search-nav-bar */
-
-.form-search-nav-bar {
-    margin-right: 5vw;
-} 
-
-/* recherche-bar */
-
-.search-bar {
-    border: solid 2px rgba(149, 191, 178, 76.8);
-    box-shadow: inset 1px 4px 4px rgb(0 0 0 / 25%);
-    padding-left: 1.8rem;
-
-}
-
-/* loupe */
-
-.loupe {
-/* _Magnifyingglass */
-
-    background-image: url('../../images/icon/_Magnifyingglass.png');
-    background-size: auto;
-    background-repeat: no-repeat;
-    background-position: 0.5vw;
 
 }
 
@@ -145,29 +117,13 @@ body {
     color: #ffffff !important;
 }
 
-/* recherche-btn */
-
-.btn-search {
-    background: rgba(255, 255, 255, 0.8);
-    border: 2px solid rgba(149, 191, 178, 76.8);
-    box-sizing: border-box;
-    border-radius: 6px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    padding: 4px 16px;
-
-}
-
-.btn-search:hover {
-    background: rgba(149, 191, 178, 76.8);
-}
-
 
 /* Burger-trait */
 
 .navbar-trait {
     width: 30px;
-    border: 1px solid #000000;
-    margin-top: 8px;
+    border: 2px solid #000000;
+    margin-top: 5px;
     margin-left: auto;
     margin-right: auto;
     background-color: #000000;
@@ -194,20 +150,8 @@ body {
     color: #00BFB2 !important;
 }
 
-/* Drop-item hover */
 
 /* content header*/
-
-#content {
-    background-color: #ffffff;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100%;
-    padding: 0 ;
-    }
-
 
     /* Image d'entete */
 
@@ -228,16 +172,10 @@ body {
         padding: 15rem 0vw 15rem 0vw;
     }
     
-
-/* image-entete */
-
-#entete-text {
-    position: relative;
-    color: #ffffff;
-}
+/* text shadow entete */
 
 .text-shadow   {
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.26));
+    filter: drop-shadow(5px 4px 4px rgba(0, 0, 0, 1));
 }
 
 
@@ -289,6 +227,7 @@ body {
     border: 2px solid rgba(0, 191, 178, 1);
     height: 0;
     width: calc(4rem + 8vw);
+    background-color: rgba(0, 191, 178, 1);
 }
 
 /* Fond page broder*/
@@ -324,6 +263,52 @@ body {
     width: 30px;
 }
 
+/* recherche-btn */
+
+
+
+.btn-search {
+    background: rgba(255, 255, 255, 0.8);
+    border: 2px solid rgba(149, 191, 178, 76.8);
+    box-sizing: border-box;
+    border-radius: 6px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    padding: 4px 16px;
+
+}
+
+.btn-search:hover {
+    background: rgba(149, 191, 178, 76.8);
+}
+
+/* form-search-nav-bar */
+
+.form-search-nav-bar {
+    margin-right: 5vw;
+} 
+
+/* recherche-bar */
+
+.search-bar {
+    border: solid 2px rgba(149, 191, 178, 76.8);
+    box-shadow: inset 1px 4px 4px rgb(0 0 0 / 25%);
+    padding-left: 1.8rem;
+
+}
+
+/* loupe */
+
+.loupe {
+/* _Magnifyingglass */
+
+    background-image: url('../../images/icon/_Magnifyingglass.png');
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: 0.5vw;
+
+}
+
+
 @media (max-width: 991.98px) { 
 
     
@@ -345,7 +330,6 @@ body {
 
 
 }
-
 
 
 @media (max-width: 575.98px) { 
