--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -274,17 +274,21 @@ body {
 
 
 .btn-search {
-    background: rgba(255, 255, 255, 0.8);
-    border: 2px solid rgba(149, 191, 178, 76.8);
+    background: rgba(0, 191, 178, 0.7);
+    border: 2px solid rgba(0, 191, 178, 0.7);
     box-sizing: border-box;
     border-radius: 6px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     padding: 4px 16px;
+    color: #ffffff;
 
 }
 
 .btn-search:hover {
-        background: rgba(149, 191, 178, 76.8);
+        background: rgba(0, 191, 178, 1);
+        border: 2px solid rgba(0, 0, 0, 0.5);
+        font-weight: bold;
+
     }
 
 /* form-search-nav-bar */
